--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,83 @@ body{
 #banner{width:100%; height:600px; background:#f6f6f6;}
 #title_box{width:100%; height:auto; background:#fff;}
 #bxslider{width:100%; height:auto; background:#555; position:relative;}
-#dynamic{width:100%; height:718px; background:#frcce01;}
+#dynamic{width:100%; height:718px; background:#fcce01;}
 #movie{width:100%; height:700px; background:#8c816e;}
 #user{width:100%; height:418px; background:#fff;}
 #reference{width:100%; height:418px; background:#f7f7f7;}
 #etc_box{width:100%; height:163px; background:#1e1e1e;}
 #footer{width:100%; height:240px; background:#fff;}
+
+/* header */
+h1{
+	float:left;
+	padding-top:27px;
+	width:193px;
+	height:25px;
+}
+#nav{
+	float:left;
+	margin-left:107px;
+}
+#nav ul{
+	overflow:hidden;
+	padding-top:27px;
+}
+#nav ul li{
+	float:left;
+	margin-right:20px;
+}
+#nav ul li a{
+	display:block;
+	font-size:18px;
+	color:#333;
+	font-weight:bold;
+	padding:4px 0;
+}
+#nav ul li a:hover{
+	color:#fecb29;
+}
+
+.gnb{
+	position:absolute;
+	right:0;
+	padding:26px 0 17px 26px;
+}
+.gnb>ul{
+	float:left;
+	margin-right:12px;
+}
+.gnb>ul a{
+	display:block;
+	padding-top:7px;
+	font-size:14px;
+}
+.gnb .sns{
+	margin-right:0;
+}
+.gnb .sns li{
+	float:left;
+	margin-right:10px;
+}
+.gnb li{
+	float:left;
+	margin-left:12px;
+}
+.gnb li img{
+	vertical-align:top;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
