--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,101 @@ h1{
 	color:#555;
 }
 
+/* main */
+.main_top{
+	width:100%;
+	padding:60px 0;
+}
+
+.main_top .container{
+	display:flex;
+}
+.main_top_left{
+	width:70%;
+	border-radius:1px solid #ddd;
+}
+.main_top_left h2{
+	font-size:32px;
+	color:#1e1e1e;
+	letter-spacing:-2.88px;
+	font-weight:700;
+	padding-bottom:30px;
+}
+.main_top_left h2 .textIcon{
+	position:relative;
+	left:18px;
+	top:10px;
+}
+.main_top_left .textBold{
+	font-size:64px;
+	font-weight:300;
+	color:#1e1e1e;
+	letter-spacing:-4.48px;
+}
+.main_top_left .textBold .colorY{
+	color:#f9c200;
+}
+.main_top_right{
+	width:30%;
+}
+.main_top_right h3{
+	font-size:17px;
+	color:#454545;
+	padding-top:5px;
+}
+.main_top_right .news_wrap{
+	margin-top:28px;
+	height:150px;
+	overflow:hidden;
+	position:relative;
+}
+.main_top_right .news_wrap .news_wrap1{
+	position:absolute;
+	top:100%;
+}
+.main_top_right .news_wrap .news_wrap1:first-child{
+	top:0;
+}
+.main_top_right .news_wrap .news_wrap1 p:last-child{
+	margin-top:28px;
+}
+.main_top_right .news_wrap .text{
+	font-size:150px;
+	letter-spacing:-0.45px;
+	color:#454545;
+	font-weight:300;
+}
+.main_top_right .news_wrap .data{
+	color:#454545;
+	font-weight:300;
+	font-size:15px;
+	display:block;
+}
+.main_bottom .playBtn{
+	position:absolute;
+	top:40%;
+	left:50%;
+	transition:all 0.3s;
+	animation-name:ani;
+	animation-duration:1s;
+	animation-iteration-count:infinite;
+	animation-direction:alternate;
+	transform:scale(1);
+}
+@keyframes ani{
+	from{transform:scale(1)}
+	to{transform:scale(1.2)}
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
