--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,21 @@ h1{
 	display:none;
 }
 
+/* title_box */
+.section_title{
+	font-size:40px;
+	color:#1e1e1e;
+	letter-spacing:-2px;
+	text-align:center;
+	padding-top:72px;
+}
+.section_p{
+	font-size:18px;
+	color:#777;
+	padding-top:30px;
+	text-align:center;
+	padding-bottom:60px;
+}
 
 
 
